# bongo

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE  PreLoad.cmake  README.md  conanfile.py
bongo/: CMakeLists.txt  bongo-config.cmake.in  bongo.h  bufio.h  bytes.h  chan.cpp  chan.h  context.cpp  context.h  crypto.h  encoding.h  error.h  flag.h  fmt.h  io.h  main_test.cpp  math.h  os.h  range.h  rune.h  runtime.h  select.cpp  select.h  strconv.h  strings.h  sync.cpp  sync.h  syscall.h  testing.h  time.h  unicode.h
bongo/bufio/: bufio.h  bufio_test.cpp  error.cpp  error.h  reader.h  scan.cpp  scan.h  scan_test.cpp  writer.h
bongo/bytes/: buffer.cpp  buffer.h  buffer_test.cpp  bytes.h  bytes_test.cpp  error.cpp  error.h  reader.cpp  reader.h  reader_test.cpp
bongo/context/: context.cpp  context.h  context_test.cpp  error.cpp  error.h
bongo/crypto/: sha1.h
bongo/crypto/sha1/: detail.h  error.cpp  error.h  sha1.cpp  sha1.h  sha1_test.cpp
bongo/detail/: bytealg.h  chan.cpp  chan.h  poll.h  semaphore.h  system.h  type_traits.h
bongo/detail/bytealg/: rabin_karp.h
bongo/detail/poll/: error.cpp  error.h  fd_mutex.h  fd_mutex_test.cpp  fd_unix.cpp  fd_unix.h  hook_unix.h
bongo/detail/syscall/: unix.cpp  unix.h
bongo/encoding/: binary.h  encoding.h
bongo/encoding/binary/: big_endian.h
bongo/flag/: error.cpp  error.h  flag.h  flag_test.cpp
bongo/fmt/: fmt_test.cpp  formatter.h  print.h  stringer.h
bongo/fmt/detail/: concepts.h  fmt.cpp  fmt.h  helpers.h  printer.cpp  printer.h  visit_at.h
bongo/io/: error.cpp  error.h  fs.h  io.h  io_test.cpp  multi.h  multi_test.cpp  pipe.cpp  pipe.h  pipe_test.cpp
bongo/io/detail/: once_error.h  visit_at.h
bongo/io/fs/: fs.h  fs_test.cpp
bongo/math/: bits.h  math.h
bongo/math/bits/: bits.h
bongo/os/: env.h  error.cpp  error.h  file.cpp  file.h  file_unix.cpp  file_unix.h  os.cpp  os.h  os_test.cpp  types.h
bongo/runtime/: chan.h  chan_test.cpp  defer.h  netpoll_epoll.h  nil.h  rune.h  select.cpp  select.h
bongo/runtime/detail/: chan_impl.cpp  chan_impl.h  system.h
bongo/strconv/: atob.h  atob_test.cpp  atoc.h  atoc_test.cpp  atof.h  atof_test.cpp  atoi.h  atoi_test.cpp  btoa.h  ctoa.h  ctoa_test.cpp  error.cpp  error.h  ftoa.h  ftoa_test.cpp  itoa.h  itoa_test.cpp  parser.h  print.h  quote.h  strconv.h
bongo/strconv/detail/: atof.h  atoi.h  decimal.h  decimal_test.cpp  eisel_lemire.h  float_info.h  ftoa.h  ftoa_ryu.h  is_print.h  itoa.h  left_cheat.h  powers_of_ten.h  quote.h
bongo/strings/: builder.cpp  builder.h  builder_test.cpp  concepts.h  error.cpp  error.h  index.h  reader.cpp  reader.h  reader_test.cpp  split.h  strings.cpp  strings.h  strings_test.cpp
bongo/strings/detail/: ascii_set.h  index.h  trim.h
bongo/sync/: wait_group.cpp  wait_group.h  wait_group_test.cpp
bongo/syscall/: exec_unix.h  syscall_unix.h
bongo/testing/: error.cpp  error.h  iotest.h
bongo/testing/iotest/: error.cpp  error.h  reader.h  reader_test.cpp
bongo/time/: time.h  timer.h  timer_test.cpp
bongo/unicode/: unicode.h  utf16.h  utf8.h
bongo/unicode/utf16/: utf16.h  utf16_test.cpp
bongo/unicode/utf8/: iterator.h  range.h  utf8.h  utf8_test.cpp
cmake/Modules/: LsbRelease.cmake
cmake/scripts/: Asan.cmake  CTestCustom.cmake  ClangTidy.cmake  Coverage.cmake  Test.cmake  Tsan.cmake  gcov.sh
examples/: CMakeLists.txt  cancel_context.cpp  channel-example.cpp  channel.cpp  deadline_context-example.cpp  deadline_context.cpp  select-example.cpp  select.cpp  timeout_context.cpp  timer-example.cpp  timer.cpp  timer_reset.cpp  value_context.cpp  wait_group-example.cpp  wait_group.cpp
tests/: CMakeLists.txt  chan.cpp  context.cpp  debug.h  main.cpp  strconv.cpp  strings.cpp  sync.cpp  time.cpp  unicode.cpp
tests/strconv/: atob.cpp  atoc.cpp  atof.cpp  atoi.cpp  ctoa.cpp  decimal.cpp  ftoa.cpp  itoa.cpp
tests/unicode/: utf8.cpp
